# scxa_2_cxg

./: Dockerfile  README.md  efo_slice.owl  obs_columns_by_experiment.json  pyproject.toml
graphs/: E-CURD-124.owl  E-CURD-134.owl  E-CURD-21.owl  E-CURD-56.owl  E-CURD-87.owl  E-CURD-90.owl  E-CURD-91.owl  E-CURD-92.owl  E-GEOD-100058.owl  E-GEOD-103771.owl  E-GEOD-125948.owl  E-GEOD-126139.owl  E-GEOD-134722.owl  E-GEOD-136162.owl  E-GEOD-141273.owl  E-GEOD-141807.owl  E-GEOD-146040.owl  E-GEOD-147601.owl  E-GEOD-152495.owl  E-GEOD-157202.owl  E-GEOD-157775.owl  E-GEOD-172231.owl  E-MTAB-10519.owl  E-MTAB-10628.owl  E-MTAB-7194.owl  E-MTAB-7195.owl  E-MTAB-8698.owl  E-MTAB-9444.owl
src/: bulk_experiments.py  scxa2cxg.py  scxa_enrichment.py  sync_files.py
