[tool.poetry]
name = "scxa-kg"
version = "0.1.0"
description = ""
authors = ["Anita Caron <anitacaron@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scanpy = "^1.9.8"
anndata = "^0.10.5.post1"
pandas = "^2.2.1"
httpx = "^0.27.0"
curies = "^0.7.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-black = "^0.3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
